# BrightspaceScraper

./: .gitignore  README.md  pyproject.toml
docs/: README.md
src/: auth.py  main.py  models.py
test/: test_models.py
